POR/RefEdge/src/objects/Invitee__c.object
<CustomObject>
    <description>Content Sharing (Bound 4)</description>
    <fields>
        <fullName>Block_Workflow_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag used to block send emails from workflows.</description>
        <label>Block Workflow Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A Contact in Salesforce.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Invitees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Visit__c</fullName>
        <label>First Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invitation__c</fullName>
        <label>Invitation</label>
        <referenceTo>Invitation__c</referenceTo>
        <relationshipName>Invitees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Recipient__c</fullName>
        <label>Other Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A colleague in Salesforce.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View_Microsite__c</fullName>
        <formula>HYPERLINK(URL__c, &apos;View Microsite&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Microsite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visits_clicks__c</fullName>
        <label>Visits (clicks)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Recipient</label>
    <nameField>
        <displayFormat>INVI-{0000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>